[tool.poetry]
name = "comprehensive-push"
version = "1.0"
description = ""
authors = ["jerryliang <jerryliang@jerryliang.top>"]
readme = "README.md"
packages = [{include = "comprehensive_push"}]

[tool.poetry.dependencies]
python = "~3.9"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
