[tool.poetry]
name = "comprehensive-push"
version = "1.0"
description = ""
authors = ["jerryliang <jerryliang@jerryliang.top>"]
readme = "README.md"
packages = [{include = "comprehensive_push"}]

[tool.poetry.dependencies]
python = "~3.9"
sqlalchemy = "^1.4.45"
requests = "^2.28.1"
sanic = "^22.9.1"
sanic-ext = "^22.9.1"
pycryptodome = "^3.16.0"
json5 = "^0.9.10"
aiomysql = "^0.1.1"
paramiko = "^2.12.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
